--- a/tool/quplog.html
+++ b/tool/quplog.html
@@ -63,11 +63,11 @@
         <h1>生成QQ更新日志(日期码)</h1>
         <form id="updateForm" action="https://api.wxies.cn/tool/quplog.php" method="get" target="_blank">
             <label for="win">Windows 大版本号：</label>
-            <input type="text" id="win" name="win" value="9.9.12"><br>
+            <input type="text" id="win" name="win"><br>
             <label for="linux">Linux 大版本号：</label>
-            <input type="text" id="linux" name="linux" value="3.2.10"><br>
+            <input type="text" id="linux" name="linux"><br>
             <label for="macos">macOS 大版本号：</label>
-            <input type="text" id="macos" name="macos" value="6.9.39"><br>
+            <input type="text" id="macos" name="macos"><br>
             <label for="vcode">小版本号：</label>
             <input type="text" id="vcode" name="vcode"><br>
             <label for="fcode">日期码：</label>
