--- a/tool/quplogc.html
+++ b/tool/quplogc.html
@@ -9,7 +9,7 @@
         body {
             margin: 0;
             padding: 0;
-            background-color: #e0f7fa;
+            background-color: #e0f2f1;
             font-family: 'Arial', sans-serif;
             display: flex;
             justify-content: center;
@@ -18,11 +18,17 @@
         }
         .container {
             width: 90%;
-            max-width: 700px;
+            max-width: 800px;
             background-color: #ffffff;
             padding: 30px;
             border-radius: 12px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+        }
+        h1 {
+            text-align: center;
+            color: #00796b;
+            margin-bottom: 20px;
+            font-size: 28px;
         }
         form {
             margin: 0;
@@ -38,7 +44,7 @@
             width: calc(100% - 40px);
             padding: 12px;
             margin-bottom: 15px;
-            border: 1px solid #ddd;
+            border: 1px solid #ccc;
             border-radius: 6px;
             box-sizing: border-box;
             text-align: center;
@@ -62,12 +68,6 @@
         }
         input[type="submit"]:hover {
             background-color: #004d40;
-        }
-        h1 {
-            text-align: center;
-            color: #00796b;
-            margin-bottom: 20px;
-            font-size: 24px;
         }
     </style>
 </head>
