--- a/tool/quplogc.html
+++ b/tool/quplogc.html
@@ -1,3 +1,4 @@
+@ -0,0 +1,98 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -63,11 +64,11 @@
         <h1>生成QQ更新日志(版本号)</h1>
         <form id="updateForm" action="https://api.wxies.cn/tool/quplogc.php" method="get" target="_blank">
             <label for="win">Windows 大版本号：</label>
-            <input type="text" id="win" name="win"><br>
+            <input type="text" id="win" name="win" value="9.9.12"><br>
             <label for="linux">Linux 大版本号：</label>
-            <input type="text" id="linux" name="linux"><br>
+            <input type="text" id="linux" name="linux" value="3.2.10"><br>
             <label for="macos">macOS 大版本号：</label>
-            <input type="text" id="macos" name="macos"><br>
+            <input type="text" id="macos" name="macos" value="6.9.39"><br>
             <label for="vcode">小版本号：</label>
             <input type="text" id="vcode" name="vcode"><br>
             <label for="fcode">Winodws X86 MD5：</label>
