--- a/tool/quplogc.html
+++ b/tool/quplogc.html
@@ -5,69 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>生成QQ更新日志(版本号)</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background-color: #f2f2f2;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        .container {
-            width: 80%;
-            max-width: 600px;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        form {
-            margin: 20px;
-            text-align: center;
-        }
-        label {
-            display: block;
-            margin-bottom: 5px;
-        }
-        input[type="text"], textarea {
-            width: calc(100% - 40px);
-            padding: 10px;
-            margin-bottom: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-            text-align: center;
-        }
-        input[type="submit"] {
-            width: 50%;
-            padding: 10px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            margin-top: 10px;
-        }
-        input[type="submit"]:hover {
-            background-color: #45a049;
-        }
-        h1 {
-            text-align: center;
-        }
-    </style>
 </head>
 <body>
     <div class="container">
         <h1>生成QQ更新日志(版本号)</h1>
         <form id="updateForm" action="https://api.wxies.cn/tool/quplogc.php" method="get" target="_blank">
             <label for="win">Windows 大版本号：</label>
-            <input type="text" id="win" name="win" value="9.9.12"><br>
+            <input type="text" id="win" name="win"><br>
             <label for="linux">Linux 大版本号：</label>
-            <input type="text" id="linux" name="linux" value="3.2.10"><br>
+            <input type="text" id="linux" name="linux"><br>
             <label for="macos">macOS 大版本号：</label>
-            <input type="text" id="macos" name="macos" value="6.9.39"><br>
+            <input type="text" id="macos" name="macos"><br>
             <label for="vcode">小版本号：</label>
             <input type="text" id="vcode" name="vcode"><br>
             <label for="fcode">Winodws X86 MD5：</label>
