--- a/tool/quplogc.html
+++ b/tool/quplogc.html
@@ -1,44 +1,94 @@
+<!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
-    <link rel="icon" href="https://q1.qlogo.cn/g?b=qq&nk=1115058004&s=640">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="https://q1.qlogo.cn/g?b=qq&nk=1115058004&s=640">
     <title>生成QQ更新日志(版本号)</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .container {
+            background-color: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            max-width: 400px;
+            width: 100%;
+        }
+
+        h1 {
+            text-align: center;
+            color: #333;
+            margin-bottom: 20px;
+        }
+
+        label {
+            font-weight: bold;
+            margin-bottom: 5px;
+            display: block;
+            color: #555;
+        }
+
+        input[type="text"],
+        textarea {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 15px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        textarea {
+            resize: vertical;
+            height: 100px;
+        }
+
+        input[type="submit"] {
+            width: 100%;
+            padding: 10px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
+
 <body>
     <div class="container">
         <h1>生成QQ更新日志(版本号)</h1>
         <form id="updateForm" action="https://api.wxies.cn/tool/quplogc.php" method="get" target="_blank">
             <label for="win">Windows 大版本号：</label>
-            <input type="text" id="win" name="win"><br>
-            <label for="linux">Linux 大版本号：</label>
-            <input type="text" id="linux" name="linux"><br>
-            <label for="macos">macOS 大版本号：</label>
-            <input type="text" id="macos" name="macos"><br>
-            <label for="vcode">小版本号：</label>
-            <input type="text" id="vcode" name="vcode"><br>
-            <label for="fcode">Winodws X86 MD5：</label>
-            <input type="text" id="w86" name="w86"><br>
-            <label for="fcode">Winodws X64 MD5：</label>
-            <input type="text" id="w64" name="w64"><br>
-            <label for="fcode">Winodws Arm MD5：</label>
-            <input type="text" id="warm" name="warm"><br>
-            <label for="fcode">macOS MD5：</label>
-            <input type="text" id="mac" name="mac"><br>
-            <label for="fcode">Linux MD5：</label>
-            <input type="text" id="linuxc" name="linuxc"><br>
-            <label for="log">更新日志：</label>
-            <textarea id="log" name="log"></textarea><br>
-            <label for="blink">备份链接初始数字（不输入删除备份段）：</label>
-            <input type="text" id="blink" name="blink"><br>
-            <input type="submit" value="生成更新日志">
-        </form>
-    </div>
+            <input type="text" id="win" name="win">
 
-    <script>
-        document.getElementById("updateForm").addEventListener("submit", function(event) {
-            event.preventDefault();
-            this.submit();
-        });
-    </script>
-</body>
-</html>
+            <label for="linux">Linux 大版本号：</label>
+            <input type="text" id="linux" name="linux">
+
+            <label for="macos">macOS 大版本号：</label>
+            <input type="text" id="macos" name="macos">
+
+            <label for="vcode">小版本号：</label>
+            <input type="text" id="vcode" name="vcode">
+
+            <label for="w86">Windows X86 MD5：</label>
+            <input type="text" id="w86" name="w86">
+
+            <label for="w64">Windows X
