--- a/tool/quplogc.html
+++ b/tool/quplogc.html
@@ -25,12 +25,14 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             max-width: 400px;
             width: 100%;
+            box-sizing: border-box;
         }
 
         h1 {
             text-align: center;
             color: #333;
             margin-bottom: 20px;
+            font-size: 24px;
         }
 
         label {
@@ -43,31 +45,59 @@
         input[type="text"],
         textarea {
             width: 100%;
-            padding: 10px;
+            padding: 8px;
             margin-bottom: 15px;
             border: 1px solid #ccc;
             border-radius: 4px;
             box-sizing: border-box;
+            font-size: 16px;
         }
 
         textarea {
             resize: vertical;
-            height: 100px;
+            min-height: 100px;
         }
 
         input[type="submit"] {
-            width: 100%;
-            padding: 10px;
-            background-color: #007bff;
+            background-color: #4CAF50;
             color: white;
             border: none;
+            padding: 10px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin-top: 10px;
             border-radius: 4px;
             cursor: pointer;
-            font-size: 16px;
+            width: 100%;
+            box-sizing: border-box;
         }
 
         input[type="submit"]:hover {
-            background-color: #0056b3;
+            background-color: #45a049;
+        }
+
+        /* 响应式设计 */
+        @media (max-width: 480px) {
+            .container {
+                padding: 15px;
+                max-width: 95%;
+            }
+
+            h1 {
+                font-size: 20px;
+            }
+
+            input[type="text"],
+            textarea {
+                font-size: 14px;
+            }
+
+            input[type="submit"] {
+                padding: 10px;
+                font-size: 14px;
+            }
         }
     </style>
 </head>
@@ -78,17 +108,36 @@
         <form id="updateForm" action="https://api.wxies.cn/tool/quplogc.php" method="get" target="_blank">
             <label for="win">Windows 大版本号：</label>
             <input type="text" id="win" name="win">
-
             <label for="linux">Linux 大版本号：</label>
             <input type="text" id="linux" name="linux">
-
             <label for="macos">macOS 大版本号：</label>
             <input type="text" id="macos" name="macos">
-
             <label for="vcode">小版本号：</label>
             <input type="text" id="vcode" name="vcode">
-
             <label for="w86">Windows X86 MD5：</label>
             <input type="text" id="w86" name="w86">
+            <label for="w64">Windows X64 MD5：</label>
+            <input type="text" id="w64" name="w64">
+            <label for="warm">Windows Arm MD5：</label>
+            <input type="text" id="warm" name="warm">
+            <label for="mac">macOS MD5：</label>
+            <input type="text" id="mac" name="mac">
+            <label for="linuxc">Linux MD5：</label>
+            <input type="text" id="linuxc" name="linuxc">
+            <label for="log">更新日志：</label>
+            <textarea id="log" name="log"></textarea>
+            <label for="blink">备份链接初始数字（不输入删除备份段）：</label>
+            <input type="text" id="blink" name="blink">
+            <input type="submit" value="生成更新日志">
+        </form>
+    </div>
 
-            <label for="w64">Windows X
+    <script>
+        document.getElementById("updateForm").addEventListener("submit", function (event) {
+            event.preventDefault();
+            this.submit();
+        });
+    </script>
+</body>
+
+</html>
