--- a/tool/quplogc.html
+++ b/tool/quplogc.html
@@ -13,7 +13,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
         }
         .container {
             background-color: #fff;
@@ -21,7 +21,8 @@
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             max-width: 500px;
-            width: 100%;
+            width: 90%;
+            box-sizing: border-box;
         }
         h1 {
             font-size: 24px;
@@ -42,6 +43,7 @@
             border-radius: 4px;
             margin-bottom: 10px;
             font-size: 14px;
+            box-sizing: border-box;
         }
         textarea {
             resize: vertical;
@@ -60,6 +62,36 @@
         }
         input[type="submit"]:hover {
             background-color: #005bb5;
+        }
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 20px;
+            }
+            input[type="text"], textarea {
+                font-size: 12px;
+            }
+            input[type="submit"] {
+                font-size: 14px;
+            }
+        }
+        @media (max-width: 480px) {
+            .container {
+                padding: 15px;
+            }
+            h1 {
+                font-size: 18px;
+            }
+            label {
+                font-size: 14px;
+            }
+            input[type="text"], textarea {
+                font-size: 12px;
+                padding: 8px;
+            }
+            input[type="submit"] {
+                font-size: 14px;
+                padding: 8px;
+            }
         }
     </style>
 </head>
