--- a/tool/quplogc.html
+++ b/tool/quplogc.html
@@ -98,15 +98,15 @@
         <form id="updateForm" action="https://api.wxies.cn/tool/quplogc.php" method="get" target="_blank">
             <div class="form-row">
                 <label for="win">Windows 大版本号：</label>
-                <input type="text" id="win" name="win">
+                <input type="text" id="win" name="win" value="9.9.">
             </div>
             <div class="form-row">
                 <label for="linux">Linux 大版本号：</label>
-                <input type="text" id="linux" name="linux">
+                <input type="text" id="linux" name="linux"value="3.2.">
             </div>
             <div class="form-row">
                 <label for="macos">macOS 大版本号：</label>
-                <input type="text" id="macos" name="macos">
+                <input type="text" id="macos" name="macos"value="6.9.">
             </div>
             <div class="form-row">
                 <label for="vcode">小版本号：</label>
