--- a/tool/quplog.html
+++ b/tool/quplog.html
@@ -1,83 +1,133 @@
-<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <link rel="icon" href="https://q1.qlogo.cn/g?b=qq&nk=1115058004&s=640">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>生成QQ更新日志(日期码)</title>
     <style>
         body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f2f5;
+            color: #333;
             margin: 0;
             padding: 0;
-            background-color: #f2f2f2;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
         }
         .container {
-            width: 80%;
-            max-width: 600px;
             background-color: #fff;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            max-width: 900px;
+            width: 90%;
+            box-sizing: border-box;
         }
-        form {
-            margin: 20px;
+        h1 {
+            font-size: 24px;
+            margin-bottom: 20px;
             text-align: center;
+            color: #0078D4;
         }
-        label {
-            display: block;
-            margin-bottom: 5px;
-        }
-        input[type="text"], textarea {
-            width: calc(100% - 40px);
-            padding: 10px;
+        .form-row {
+            display: flex;
+            flex-wrap: wrap;
             margin-bottom: 10px;
+        }
+        .form-row label {
+            flex: 1 1 40%;
+            margin-bottom: 5px;
+            font-weight: bold;
+        }
+        .form-row input[type="text"] {
+            flex: 1 1 55%;
+            padding: 10px;
             border: 1px solid #ccc;
             border-radius: 4px;
+            font-size: 14px;
             box-sizing: border-box;
-            text-align: center;
+        }
+        .form-row.full-width {
+            flex-direction: column;
+        }
+        .form-row.full-width textarea {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            font-size: 14px;
+            height: 100px;
+            resize: vertical;
+            box-sizing: border-box;
         }
         input[type="submit"] {
-            width: 50%;
+            background-color: #0078D4;
+            color: #fff;
             padding: 10px;
-            background-color: #4CAF50;
-            color: white;
             border: none;
             border-radius: 4px;
             cursor: pointer;
-            margin-top: 10px;
+            font-size: 16px;
+            width: 100%;
+            margin-top: 20px;
         }
         input[type="submit"]:hover {
-            background-color: #45a049;
+            background-color: #005bb5;
         }
-        h1 {
-            text-align: center;
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 20px;
+            }
+            .form-row {
+                flex-direction: column;
+            }
+            .form-row label, .form-row input[type="text"], .form-row.full-width textarea {
+                width: 100%;
+                flex: 1 1 100%;
+            }
+            input[type="submit"] {
+                font-size: 14px;
+            }
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>生成QQ更新日志(日期码)</h1>
+        <h1>生成QQ更新日志(版本号)</h1>
         <form id="updateForm" action="https://api.wxies.cn/tool/quplog.php" method="get" target="_blank">
-            <label for="win">Windows 大版本号：</label>
-            <input type="text" id="win" name="win"><br>
-            <label for="linux">Linux 大版本号：</label>
-            <input type="text" id="linux" name="linux"><br>
-            <label for="macos">macOS 大版本号：</label>
-            <input type="text" id="macos" name="macos"><br>
-            <label for="vcode">小版本号：</label>
-            <input type="text" id="vcode" name="vcode"><br>
-            <label for="fcode">日期码：</label>
-            <input type="text" id="fcode" name="fcode"><br>
-            <label for="pnum">发版次数：</label>
-            <input type="text" id="pnum" name="pnum" value="01"><br>
-            <label for="log">更新日志：</label>
-            <textarea id="log" name="log"></textarea><br>
-            <label for="blink">备份链接初始数字（不输入删除备份段）：</label>
-            <input type="text" id="blink" name="blink"><br>
+            <div class="form-row">
+                <label for="win">Windows 大版本号：</label>
+                <input type="text" id="win" name="win" value="9.9.">
+            </div>
+            <div class="form-row">
+                <label for="linux">Linux 大版本号：</label>
+                <input type="text" id="linux" name="linux"value="3.2.">
+            </div>
+            <div class="form-row">
+                <label for="macos">macOS 大版本号：</label>
+                <input type="text" id="macos" name="macos"value="6.9.">
+            </div>
+            <div class="form-row">
+                <label for="vcode">小版本号：</label>
+                <input type="text" id="vcode" name="vcode">
+            </div>
+            <div class="form-row">
+                <label for="w86">日期码：</label>
+                <input type="text" id="fcode" name="fcode">
+            </div>
+            <div class="form-row">
+                <label for="w64">发版次数：</label>
+                <input type="text" id="pnum" name="pnum" value="01">
+            </div>
+            <div class="form-row full-width">
+                <label for="log">更新日志：</label>
+                <textarea id="log" name="log"></textarea>
+            </div>
+            <div class="form-row full-width">
+                <label for="blink">备份链接初始数字（不输入删除备份段）：</label>
+                <input type="text" id="blink" name="blink">
+            </div>
             <input type="submit" value="生成更新日志">
         </form>
     </div>
