--- a/tool/qtest.html
+++ b/tool/qtest.html
@@ -1,59 +1,154 @@
-<?php
+<html lang="zh-CN">
+<head>
+    <link rel="icon" href="https://q1.qlogo.cn/g?b=qq&nk=1115058004&s=640">
+    <meta charset="UTF-8">
+    <title>生成QQ更新日志(版本号)</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f2f5;
+            color: #333;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+        }
+        .container {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            max-width: 900px;
+            width: 90%;
+            box-sizing: border-box;
+        }
+        h1 {
+            font-size: 24px;
+            margin-bottom: 20px;
+            text-align: center;
+            color: #0078D4;
+        }
+        .form-row {
+            display: flex;
+            flex-wrap: wrap;
+            margin-bottom: 10px;
+        }
+        .form-row label {
+            flex: 1 1 40%;
+            margin-bottom: 5px;
+            font-weight: bold;
+        }
+        .form-row input[type="text"] {
+            flex: 1 1 55%;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            font-size: 14px;
+            box-sizing: border-box;
+        }
+        .form-row.full-width {
+            flex-direction: column;
+        }
+        .form-row.full-width textarea {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            font-size: 14px;
+            height: 100px;
+            resize: vertical;
+            box-sizing: border-box;
+        }
+        input[type="submit"] {
+            background-color: #0078D4;
+            color: #fff;
+            padding: 10px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+            width: 100%;
+            margin-top: 20px;
+        }
+        input[type="submit"]:hover {
+            background-color: #005bb5;
+        }
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 20px;
+            }
+            .form-row {
+                flex-direction: column;
+            }
+            .form-row label, .form-row input[type="text"], .form-row.full-width textarea {
+                width: 100%;
+                flex: 1 1 100%;
+            }
+            input[type="submit"] {
+                font-size: 14px;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>生成QQ更新日志(版本号)</h1>
+        <form id="updateForm" action="https://api.wxies.cn/tool/quplogtest.php" method="get" target="_blank">
+            <div class="form-row">
+                <label for="win">Windows 大版本号：</label>
+                <input type="text" id="win" name="win" value="9.9.">
+            </div>
+            <div class="form-row">
+                <label for="linux">Linux 大版本号：</label>
+                <input type="text" id="linux" name="linux"value="3.2.">
+            </div>
+            <div class="form-row">
+                <label for="macos">macOS 大版本号：</label>
+                <input type="text" id="macos" name="macos"value="6.9.">
+            </div>
+            <div class="form-row">
+                <label for="vcode">小版本号：</label>
+                <input type="text" id="vcode" name="vcode">
+            </div>
+            <div class="form-row">
+                <label for="w86">Windows X86 MD5：</label>
+                <input type="text" id="w86" name="w86">
+            </div>
+            <div class="form-row">
+                <label for="w64">Windows X64 MD5：</label>
+                <input type="text" id="w64" name="w64">
+            </div>
+            <div class="form-row">
+                <label for="warm">Windows Arm MD5：</label>
+                <input type="text" id="warm" name="warm">
+            </div>
+            <div class="form-row">
+                <label for="mac">macOS MD5：</label>
+                <input type="text" id="mac" name="mac">
+            </div>
+            <div class="form-row">
+                <label for="linuxc">Linux MD5：</label>
+                <input type="text" id="linuxc" name="linuxc">
+            </div>
+            <div class="form-row full-width">
+                <label for="log">更新日志：</label>
+                <textarea id="log" name="log"></textarea>
+            </div>
+            <div class="form-row full-width">
+                <label for="blink">备份链接初始数字（不输入删除备份段）：</label>
+                <input type="text" id="blink" name="blink">
+            </div>
+            <input type="submit" value="生成更新日志">
+        </form>
+    </div>
 
-// 设置变量
-$windows_version_name = $_GET["win"];
-$linux_version_name = $_GET["linux"];
-$macos_version_name = $_GET["macos"];
-$version_code = $_GET["vcode"];
-$winodws_x86_md5 = $_GET["w86"];
-$winodws_x64_md5 = $_GET["w64"];
-$winodws_arm_md5 = $_GET["warm"];
-$macos_md5 = $_GET["mac"];
-$linux_md5 = $_GET["linuxc"];
-$update_log = $_GET["log"];
-$backup_link_num = $_GET["blink"];
-
-// 替换链接
-$update_content = "**Windows QQ_NT {$windows_version_name}.{$version_code} &**\n";
-$update_content .= "**MacOS QQ_NT {$macos_version_name}.{$version_code} &**\n";
-$update_content .= "**Linux QQ_NT {$linux_version_name}.{$version_code}**\n";
-$update_content .= "\n**官方更新内容：**\n{$update_log}\n\n";
-$update_content .= "**下载：**\n";
-$update_content .= "- Windows:\n";
-$update_content .= "[X86](https://dldir1.qq.com/qqfile/qq/QQNT/{$winodws_x86_md5}/QQ{$windows_version_name}.{$version_code}_x86.exe) | [X64](https://dldir1.qq.com/qqfile/qq/QQNT/{$winodws_x64_md5}/QQ{$windows_version_name}.{$version_code}_x64.exe) | [Arm](https://dldir1.qq.com/qqfile/qq/QQNT/{$winodws_arm_md5}/QQ{$windows_version_name}.{$version_code}_arm64.exe)\n";
-$update_content .= "- MacOS:\n";
-$update_content .= "[Dmg](https://dldir1.qq.com/qqfile/qq/QQNT/{$macos_md5}/QQ_v{$macos_version_name}.{$version_code}.dmg)\n";
-$update_content .= "- Linux:\n";
-$update_content .= "[DEB_x64](https://dldir1.qq.com/qqfile/qq/QQNT/{$linux_md5}/linuxqq_{$linux_version_name}-{$version_code}_amd64.deb) | [RPM_x64](https://dldir1.qq.com/qqfile/qq/QQNT/{$linux_md5}/linuxqq_{$linux_version_name}-{$version_code}_x86_64.rpm) | [Appimage_x64](https://dldir1.qq.com/qqfile/qq/QQNT/{$linux_md5}/linuxqq_{$linux_version_name}-{$version_code}_x86_64.AppImage)\n";
-$update_content .= "[DEB_Arm](https://dldir1.qq.com/qqfile/qq/QQNT/{$linux_md5}/linuxqq_{$linux_version_name}-{$version_code}_arm64.deb) | [RPM_Arm](https://dldir1.qq.com/qqfile/qq/QQNT/{$linux_md5}/linuxqq_{$linux_version_name}-{$version_code}_aarch64.rpm) | [Appimage_Arm](https://dldir1.qq.com/qqfile/qq/QQNT/{$linux_md5}/linuxqq_{$linux_version_name}-{$version_code}_arm64.AppImage)\n";
-$update_content .= "[LoongArch](https://dldir1.qq.com/qqfile/qq/QQNT/{$linux_md5}/linuxqq_{$linux_version_name}-{$version_code}_loongarch64.deb) | [Mips](https://dldir1.qq.com/qqfile/qq/QQNT/{$linux_md5}/linuxqq_{$linux_version_name}-{$version_code}_mips64el.deb)\n";
-// 备份
-if ($backup_link_num !== "") {
-    $backup_link_num = intval($backup_link_num) ?: 0;
-    $update_content .= "\n**备份：**\n";
-    $update_content .= "- Windows:\n";
-    $update_content .= "[X86](https://t.me/linqiqi_backup/{$backup_link_num}) | [X64](https://t.me/linqiqi_backup/" . ++$backup_link_num . ") | [Arm](https://t.me/linqiqi_backup/" . ++$backup_link_num . ")\n";
-    $update_content .= "- MacOS:\n";
-    $update_content .= "[Dmg](https://t.me/linqiqi_backup/" . ++$backup_link_num . ")\n";
-    $update_content .= "- Linux:\n";
-    $update_content .= "[DEB](https://t.me/linqiqi_backup/" . ++$backup_link_num . ") | [RPM](https://t.me/linqiqi_backup/" . ++$backup_link_num . ") | [Appimage](https://t.me/linqiqi_backup/" . ++$backup_link_num . ") | [LoongArch](https://t.me/linqiqi_backup/" . ++$backup_link_num . ") | [Mips](https://t.me/linqiqi_backup/" . ++$backup_link_num . ")\n";
-}
-
-$update_content .= "\nTG@ [QQ/TIM For Update Log](https://t.me/qq_updatelog)\n";
-$update_content .= "#QQ_NT_Windows\n";
-$update_content .= "#QQ_NT_MacOS\n";
-$update_content .= "#QQ_NT_Linux";
-// 输出到文件
-$file_name = "QQ_Update_Log_{$version_code}.md";
-file_put_contents($file_name, $update_content);
-
-// 文件下载
-header("Content-Disposition: attachment; filename=\"$file_name\"");
-header("Content-Type: text/markdown");
-header("Content-Length: " . filesize($file_name));
-readfile($file_name);
-
-// 删除
-unlink($file_name);
-
-?>
+    <script>
+        document.getElementById("updateForm").addEventListener("submit", function(event) {
+            event.preventDefault();
+            this.submit();
+        });
+    </script>
+</body>
+</html>
