--- a/tool/qtest.html
+++ b/tool/qtest.html
@@ -133,8 +133,8 @@
                 <input type="text" id="linuxc" name="linuxc">
             </div>
             <div class="form-row full-width">
-                <label for="log">更新日志：</label>
-                <textarea id="log" name="log"></textarea>
+                <label for="url">链接</label>
+                <textarea id="url" name="url"></textarea>
             </div>
             <div class="form-row full-width">
                 <label for="blink">备份链接初始数字（不输入删除备份段）：</label>
