--- a/tool/qtest.html
+++ b/tool/qtest.html
@@ -96,45 +96,13 @@
     <div class="container">
         <h1>生成QQ更新日志(版本号)</h1>
         <form id="updateForm" action="https://api.wxies.cn/tool/quplogtest.php" method="get" target="_blank">
-            <div class="form-row">
-                <label for="win">Windows 大版本号：</label>
-                <input type="text" id="win" name="win" value="9.9.">
-            </div>
-            <div class="form-row">
-                <label for="linux">Linux 大版本号：</label>
-                <input type="text" id="linux" name="linux"value="3.2.">
-            </div>
-            <div class="form-row">
-                <label for="macos">macOS 大版本号：</label>
-                <input type="text" id="macos" name="macos"value="6.9.">
-            </div>
-            <div class="form-row">
-                <label for="vcode">小版本号：</label>
-                <input type="text" id="vcode" name="vcode">
-            </div>
-            <div class="form-row">
-                <label for="w86">Windows X86 MD5：</label>
-                <input type="text" id="w86" name="w86">
-            </div>
-            <div class="form-row">
-                <label for="w64">Windows X64 MD5：</label>
-                <input type="text" id="w64" name="w64">
-            </div>
-            <div class="form-row">
-                <label for="warm">Windows Arm MD5：</label>
-                <input type="text" id="warm" name="warm">
-            </div>
-            <div class="form-row">
-                <label for="mac">macOS MD5：</label>
-                <input type="text" id="mac" name="mac">
-            </div>
-            <div class="form-row">
-                <label for="linuxc">Linux MD5：</label>
-                <input type="text" id="linuxc" name="linuxc">
-            </div>
             <div class="form-row full-width">
                 <label for="url">链接</label>
                 <textarea id="url" name="url"></textarea>
+            </div>
+            <div class="form-row full-width">
+                <label for="log">更新日志：</label>
+                <textarea id="log" name="log"></textarea>
             </div>
             <div class="form-row full-width">
                 <label for="blink">备份链接初始数字（不输入删除备份段）：</label>
