--- a/tool/qtest.html
+++ b/tool/qtest.html
@@ -124,6 +124,10 @@
                 <label for="blink">备份链接初始数字（不输入删除备份段）：</label>
                 <input type="text" id="blink" name="blink">
             </div>
+            <div class="form-row full-width">
+                <label for="token">Token：</label>
+                <input type="text" id="token" name="token">
+            </div>
             <input type="submit" value="生成更新日志">
         </form>
     </div>
