--- a/tool/qtest.html
+++ b/tool/qtest.html
@@ -109,7 +109,7 @@
                 <input type="text" id="link_windows_arm" name="link_windows_arm">
             </div>
             <div class="form-row">
-                <label for="link_macos">macOOS 链接</label>
+                <label for="link_macos">macOS 链接</label>
                 <input type="text" id="link_macos" name="link_macos">
             </div>
             <div class="form-row">
