--- a/tool/quplogc.html
+++ b/tool/quplogc.html
@@ -97,7 +97,7 @@
         <h1>生成QQ更新日志(版本号)</h1>
         <form id="updateForm" action="https://api.wxies.cn/tool/quplogc.php" method="get" target="_blank">
             <div class="form-row">
-                <label for="link_windows_x86">Windows X86 链接</label>
+                <label for="link_windows_x86">Windows X86 链接(不输入则删除此段)</label>
                 <input type="text" id="link_windows_x86" name="link_windows_x86">
             </div>
             <div class="form-row">
@@ -109,11 +109,11 @@
                 <input type="text" id="link_windows_arm" name="link_windows_arm">
             </div>
             <div class="form-row">
-                <label for="link_macos">macOS 链接</label>
+                <label for="link_macos">macOS 链接(不输入则删除此段)</label>
                 <input type="text" id="link_macos" name="link_macos">
             </div>
             <div class="form-row">
-                <label for="link_linux">Linux 链接（任意一个）</label>
+                <label for="link_linux">Linux 链接（任意一个 不输入则删除此段）</label>
                 <input type="text" id="link_linux" name="link_linux">
             </div>
             <div class="form-row full-width">
