--- a/tool/test.html
+++ b/tool/test.html
@@ -2,6 +2,7 @@
 <head>
     <link rel="icon" href="https://q1.qlogo.cn/g?b=qq&nk=1115058004&s=640">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>生成QQ更新日志(版本号)</title>
     <style>
         body {
@@ -78,23 +79,28 @@
         input[type="submit"]:hover {
             background-color: #005bb5;
         }
-        /* 移动端优化 */
+
+        /* 响应式设计 */
         @media (max-width: 768px) {
             h1 {
                 font-size: 20px;
             }
             .form-row {
                 flex-direction: column;
+                margin-bottom: 12px;
             }
-            .form-row label, .form-row input[type="text"], .form-row.full-width textarea {
+            .form-row label {
                 width: 100%;
-                flex: 1 1 100%;
+                margin-bottom: 6px;
+                font-size: 16px;
+            }
+            .form-row input[type="text"], .form-row textarea {
+                width: 100%;
+                font-size: 16px;
             }
             input[type="submit"] {
                 font-size: 14px;
-            }
-            .form-row input[type="text"], .form-row textarea {
-                font-size: 16px;
+                padding: 14px;
             }
         }
     </style>
