test: new ui test

--- a/tool/test.html
+++ b/tool/test.html
@@ -1,109 +1,11 @@
+<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <link rel="icon" href="https://q1.qlogo.cn/g?b=qq&nk=1115058004&s=640">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>生成QQ更新日志(版本号)</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f2f5;
-            color: #333;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-        }
-        .container {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 900px;
-            width: 100%;
-            box-sizing: border-box;
-        }
-        h1 {
-            font-size: 24px;
-            margin-bottom: 20px;
-            text-align: center;
-            color: #0078D4;
-        }
-        .form-row {
-            display: flex;
-            flex-wrap: wrap;
-            margin-bottom: 15px;
-            justify-content: space-between;
-        }
-        .form-row label {
-            flex: 1 1 40%;
-            margin-bottom: 8px;
-            font-weight: bold;
-            color: #555;
-        }
-        .form-row input[type="text"], .form-row textarea {
-            flex: 1 1 55%;
-            padding: 12px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            font-size: 14px;
-            box-sizing: border-box;
-        }
-        .form-row.full-width {
-            flex-direction: column;
-        }
-        .form-row.full-width textarea {
-            width: 100%;
-            padding: 12px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            font-size: 14px;
-            height: 120px;
-            resize: vertical;
-            box-sizing: border-box;
-        }
-        input[type="submit"] {
-            background-color: #0078D4;
-            color: #fff;
-            padding: 12px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
-            width: 100%;
-            margin-top: 20px;
-            transition: background-color 0.3s;
-        }
-        input[type="submit"]:hover {
-            background-color: #005bb5;
-        }
-
-        /* 响应式设计 */
-        @media (max-width: 768px) {
-            h1 {
-                font-size: 20px;
-            }
-            .form-row {
-                flex-direction: column;
-                margin-bottom: 12px;
-            }
-            .form-row label {
-                width: 100%;
-                margin-bottom: 6px;
-                font-size: 16px;
-            }
-            .form-row input[type="text"], .form-row textarea {
-                width: 100%;
-                font-size: 16px;
-            }
-            input[type="submit"] {
-                font-size: 14px;
-                padding: 14px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css"> <!-- 引入外部CSS文件 -->
 </head>
 <body>
     <div class="container">
