test: responsive layout optimization

--- a/tool/test.html
+++ b/tool/test.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>生成QQ更新日志(版本号)</title>
-    <link rel="stylesheet" href="styles.css"> <!-- 引入外部CSS文件 -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
