--- a/tool/quplogc.html
+++ b/tool/quplogc.html
@@ -31,7 +31,7 @@
                 <label for="link_linux">Linux 链接（任意一个 不输入则删除此段）</label>
                 <input type="text" id="link_linux" name="link_linux">
             </div>
-            <div class="form-row full-width">
+            <div class="form-row">
                 <label for="log">更新日志：</label>
                 <textarea id="log" name="log"></textarea>
             </div>
