--- a/tool/quplogc.html
+++ b/tool/quplogc.html
@@ -35,11 +35,11 @@
                 <label for="log">更新日志：</label>
                 <textarea id="log" name="log"></textarea>
             </div>
-            <div class="form-row full-width">
+            <div class="form-row">
                 <label for="blink">备份链接初始数字（不输入删除备份段）：</label>
                 <input type="text" id="blink" name="blink">
             </div>
-            <div class="form-row full-width">
+            <div class="form-row">
                 <label for="token">Token（无则不推送至 Telegram）：</label>
                 <input type="text" id="token" name="token">
             </div>
