--- a/tool/quplog.html
+++ b/tool/quplog.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h1>生成QQ更新日志(版本号)</h1>
-        <form id="updateForm" action="https://api.wxies.cn/tool/quplogc.php" method="get" target="_blank">
+        <form id="updateForm" action="https://api.wxies.cn/tool/quplog.php" method="get" target="_blank">
             <div class="form-row">
                 <label for="link_windows_x86">Windows X86 链接</label>
                 <input type="text" id="link_windows_x86" name="link_windows_x86">
